--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,29 @@
-version: "3.8"
 services:
+  consul:
+    image: hashicorp/consul:latest
+    container_name: payd-consul
+    restart: unless-stopped
+    ports:
+      - 9090:8500
+    volumes:
+      - ./consul/data:/consul/data
+      - ./consul/config:/consul/config
+    networks:
+      - payd-net
+
+  consul-init:
+    image: curlimages/curl
+    container_name: payd-consul-init
+    volumes:
+      - ./consul/init.sh:/init.sh
+      - ./consul/config:/consul/config
+    command: /init.sh
+    depends_on:
+      consul:
+        condition: service_started
+    networks:
+      - payd-net
+
   database:
     image: postgres
     container_name: payd-db
@@ -12,6 +36,11 @@ services:
       - POSTGRES_PASSWORD=admin
     volumes:
       - ./database/data:/var/lib/postgresql/data
+    #healthcheck:
+    #  test: ["CMD-SHELL", "pg_isready -U liquibase -d liquibase_migration"]
+    #  interval: 10s
+    #  timeout: 5s
+    #  retries: 5
     networks:
       - payd-net
 
