--- a/backend/.air.toml
+++ b/backend/.air.toml
@@ -4,8 +4,9 @@ tmp_dir = "tmp"
 
 [build]
   args_bin = []
-  bin = "./tmp/main"
-  cmd = "make format && make report && go build -o ./tmp/main ."
+  bin = ";GO_ENV=DEV ./tmp/main"
+  #cmd = "make format && make report && go build -o ./tmp/main ."
+  cmd = "make run"
   delay = 1000
   exclude_dir = ["assets", "tmp", "vendor", "testdata"]
   exclude_file = []
