--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,10 +1,10 @@
 global:
-  scrape_interval: 15s
+  scrape_interval: 5s
 
 scrape_configs:
   - job_name: 'otel-collector'
     static_configs:
       - targets: ['otel-collector:8889']
-  - job_name: 'order-api'
+  - job_name: 'rms-api'
     static_configs:
-      - targets: [ 'host.docker.internal:3001']
+      - targets: [ 'host.docker.internal:9095']
